[gd_scene load_steps=10 format=3 uid="uid://cbhaoe8u84v6d"]

[ext_resource type="Script" path="res://Main_Menu.gd" id="1_jcei6"]
[ext_resource type="Texture2D" uid="uid://eeuekohfsufh" path="res://Images/Chicken.jpg" id="2_1mx7s"]
[ext_resource type="Texture2D" uid="uid://c0444ccqq0sxk" path="res://Images/Turtle.jpg" id="3_f7ssj"]

[sub_resource type="Animation" id="Animation_1fepp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-508, -73)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_mfuno"]
resource_name = "bounce"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-514, 27), Vector2(-508, -73), Vector2(-514, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aw6bn"]
_data = {
"RESET": SubResource("Animation_1fepp"),
"bounce": SubResource("Animation_mfuno")
}

[sub_resource type="Animation" id="Animation_a2ix7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(226, -165)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_xsa34"]
resource_name = "walk_off"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(226, -165), Vector2(585, -142)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i5nl4"]
_data = {
"RESET": SubResource("Animation_a2ix7"),
"walk_off": SubResource("Animation_xsa34")
}

[node name="Main_Menu" type="CenterContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_jcei6")

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="New_Game_Button" type="Button" parent="Menu"]
layout_mode = 2
text = "New Game"

[node name="Load_Game_Button" type="Button" parent="Menu"]
layout_mode = 2
text = "Load Game"

[node name="Settings_Button" type="Button" parent="Menu"]
layout_mode = 2
text = "Settings"

[node name="Exit_Button" type="Button" parent="Menu"]
layout_mode = 2
text = "Exit"

[node name="Extras" type="Control" parent="."]
layout_mode = 2

[node name="Chicken_Button" type="TextureButton" parent="Extras"]
layout_mode = 2
offset_left = -508.0
offset_top = -73.0
offset_right = 692.0
offset_bottom = 1727.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("2_1mx7s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Extras/Chicken_Button"]
libraries = {
"": SubResource("AnimationLibrary_aw6bn")
}

[node name="Turtle_Button" type="TextureButton" parent="Extras"]
layout_mode = 0
offset_left = 226.0
offset_top = -165.0
offset_right = 1976.01
offset_bottom = 2335.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("3_f7ssj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Extras/Turtle_Button"]
libraries = {
"": SubResource("AnimationLibrary_i5nl4")
}

[connection signal="pressed" from="Menu/New_Game_Button" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="Menu/Load_Game_Button" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="Menu/Settings_Button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Menu/Exit_Button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Extras/Chicken_Button" to="." method="_on_chicken_button_pressed"]
[connection signal="pressed" from="Extras/Turtle_Button" to="." method="_on_turtle_button_pressed"]
